fix scrollbar of the Discover resources by category section

--- a/app/styles/components/_categorypage.scss
+++ b/app/styles/components/_categorypage.scss
@@ -34,7 +34,8 @@
 .category-items {
   @extend %flex-row;
   margin: 0 auto;
-  overflow-x: scroll;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .category-item {
@@ -48,9 +49,7 @@
   border: 1px solid #E0E0E0;
   border-radius: 3px;
   background-color: $color-white;
-  &:not(:last-child) {
-    margin-right: calc-em(10px);
-  }
+  margin: calc-em(5px);
   &:active, &:hover, &:focus {
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
   }
